--- a/scss/layout/_table.scss
+++ b/scss/layout/_table.scss
@@ -38,3 +38,29 @@
 		}
 	}
 }
+
+.waper{
+	background: url(../img/bg_table.jpg);
+	padding: 100px 0;
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+/*========================
+	Reservation Search
+==========================*/
+.reservation_search{
+	h3{
+		color:#fff;
+		text-align: center;
+		margin-bottom: 15px;
+	}
+	.ct_form_control{
+		background-color: transparent;
+		border-radius: 0;
+	}
+	.form-group{
+		margin-bottom: 0;
+	}
+}
