--- a/scss/layout/_builder_modules.scss
+++ b/scss/layout/_builder_modules.scss
@@ -290,6 +290,77 @@
 
 /*
 	========================
-		Progress Bars
+		Slider nav
 	========================
 */
+
+.gt_slider_nav{
+	background-color: #fff;
+	border-bottom-left-radius: 20px;
+	border-bottom-right-radius: 20px;
+    max-width: 226px;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    z-index: 1;
+    height: calc( 100% - 2.143em);
+    overflow-x: scroll;
+	ul{
+		margin: 0;
+		padding: 0;
+		li{
+			list-style: none;
+			padding: 6px 12px;
+			transition: all 0.9s ease;
+			border-bottom:1px dashed #ddd;
+			a{
+				color: #333e48;
+				font-size: 14px;
+				display: block;
+			}
+			&:hover{
+				background: #ddd;
+			}
+		}
+	}
+	.gs_dropdown{
+		position: relative;
+		.vertical_dropdown{
+			background: #fff;
+			position: absolute;
+			width: 100%;
+			left: 100%;
+			top: 0;
+			display: none;
+			opacity: 0;
+		}
+		&:hover{
+			.vertical_dropdown{
+				opacity: 1;
+				display: block;
+			}
+		}
+	}
+	.vertical_menu_title{
+		background-color:#fed700;
+		h4{
+			font-size: 20px;
+			padding: 15px;
+		}
+	}
+}
+
+
+/*******************************************/
+// Medium devices (mobile, less than 768px)
+/********************************************/
+@media (max-width: 750px) {
+	.gt_slider_nav{
+		display: none;
+	}
+}
+@media (min-width: 1200px) {
+	.gt_slider_nav{
+		overflow: initial;
+	}
+}
