--- a/css/style.css
+++ b/css/style.css
@@ -28,50 +28,6 @@
 -------------------------------------------------------------------*/
 /*
 	=================================
-		@Loaded All Plugins
-	=================================
-*/
-/* 
- * Embed Google Font
- * 'Catamaran', sans-serif;
-*/
-@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap");
-/* 
- * Bootstrap v4.3.1 (https://getbootstrap.com/)
- * Copyright 2011-2018 The Bootstrap Authors
- * Copyright 2011-2018 Twitter, Inc.
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
-*/
-@import url("../css/bootstrap.min.css");
-/* 
- *  Font Awesome 4.7.0 by @davegandy - http://fontawesome.io - @fontawesome
- *  License - http://fontawesome.io/license (Font: SIL OFL 1.1, CSS: MIT License)
-*/
-@import url("../css/font-awesome.min.css");
-/**
- * Owl Carousel v2.3.4
- * Copyright 2013-2018 David Deutsch
- * Licensed under: SEE LICENSE IN https://github.com/OwlCarousel2/OwlCarousel2/blob/master/LICENSE
- */
-@import url("../css/owl.carousel.min.css");
-/*! stellarnav.min
- * Copyright (c) vinnymoreira; 
- */
-@import url("../css/stellarnav.min.css");
-/*!
- * animate.css -http://daneden.me/animate
- * Version - 3.6.0
- * Licensed under the MIT license - http://opensource.org/licenses/MIT
- *
- * Copyright (c) 2018 Daniel Eden
- */
-@import url("../css/animate.min.css");
-/* Compatibility styles for frameworks like bootstrap, foundation e.t.c */
-@import url("../css/xzoom.css");
-/* For pogo slider */
-@import url("../css/pogo-slider.min.css");
-/*
-	=================================
 		@Loaded All Variables
 	=================================
 */
@@ -443,6 +399,13 @@ span {
   background: #f3f3f3;
 }
 
+.gs_right_menu .fa-bars {
+  display: none;
+}
+
+nav li a:hover {
+  color: #374850;
+}
 nav .logo {
   position: absolute;
   top: 50%;
@@ -480,6 +443,10 @@ nav .submenu-cat-title {
 nav .submenu-links {
   padding: 0 !important;
   margin: 15px 0 !important;
+  color: #777 !important;
+}
+nav .submenu-links:hover {
+  color: #374850 !important;
 }
 nav .submenu-link-box {
   width: 250px;
@@ -860,6 +827,7 @@ nav .gs-product-img a {
   display: block;
 }
 .leftSticky-menu a:hover {
+  color: white;
   background: #726c6c;
 }
 .leftSticky-menu .gs-sub-menu li {
@@ -891,6 +859,7 @@ nav .gs-product-img a {
   color: #726c6c;
 }
 .leftSticky-menu .gs-sub-menu-list a {
+  color: white !important;
   min-width: 200px;
   margin: 0 !important;
   padding: 15px !important;
@@ -898,6 +867,14 @@ nav .gs-product-img a {
 .leftSticky-menu .gs-sub-menu-list a:hover {
   color: white;
   background: #726c6c;
+}
+.leftSticky-menu .submenu-links {
+  color: white !important;
+  padding: 5px !important;
+}
+.leftSticky-menu .submenu-links:hover {
+  color: white !important;
+  background: #726c6c !important;
 }
 
 /*******************************************/
